<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".myNewRecipe.NewRecipeActivity"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/ic_backgro">
    <ImageView
        android:id="@+id/recipe_photo"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:scaleType="fitXY"
        android:background="@color/cardview_dark_background"/>

    <Button
        android:id="@+id/take_photo"
        android:onClick="takePhoto"
        android:layout_marginTop="10dp"
        android:layout_width="160dp"
        android:layout_height="30dp"
        android:backgroundTint="@null"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        app:backgroundTint="@null"
        app:elevation="0dp"
        android:textSize="18sp"
        android:text="@string/take_photo"
        android:textColor="@color/white"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <EditText
        android:id="@+id/recipe_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/wpisz_nazw_przepisu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/save"
        android:onClick="zapis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.317"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8" />
    </LinearLayout>
</LinearLayout>