<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/ic_backgro">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:orientation="horizontal"
   >


    </LinearLayout>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
            android:orientation="vertical">
            <androidx.cardview.widget.CardView
                android:id="@+id/my_own_recipes"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                app:cardCornerRadius="20dp"
                android:layout_margin="10dp"
                app:cardBackgroundColor="#F4EFEF"
                android:onClick="myOwnRecipes"

                >

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/cookies"
                    android:scaleType="centerCrop"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/my_own_recipes"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:shadowDx="4"
                    android:shadowDy="4"
                    android:shadowColor="@color/black"
                    android:shadowRadius="5"/>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/sample_dinner"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:cardCornerRadius="20dp"
            android:layout_margin="10dp"
            app:cardBackgroundColor="#F4EFEF"
                android:onClick="sample_dinner"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/spag"
                android:scaleType="centerCrop"

                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sample_dinner"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold"
                android:shadowDx="4"
                android:shadowDy="4"
                android:shadowColor="@color/black"
                android:shadowRadius="5"/>
        </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                app:cardCornerRadius="20dp"
                android:layout_margin="10dp"
                app:cardBackgroundColor="#F4EFEF"
                android:onClick="temp"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/pasta"
                    android:scaleType="centerCrop"

                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/breakfast"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:shadowDx="4"
                    android:shadowDy="4"
                    android:shadowColor="@color/black"
                    android:shadowRadius="5"/>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                app:cardCornerRadius="20dp"
                android:layout_margin="10dp"
                app:cardBackgroundColor="#F4EFEF"
                android:clickable="true"
                android:onClick="temp"
                android:foreground="?android:attr/selectableItemBackground">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/piza"
                    android:scaleType="centerCrop"

                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lunch"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:shadowDx="4"
                    android:shadowDy="4"
                    android:shadowColor="@color/black"
                    android:shadowRadius="5"/>
            </androidx.cardview.widget.CardView>


        </LinearLayout>
        </ScrollView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

